RESOLVED FIXED172263
AudioSourceProviderAVFObjC::m_tap member access is not thread safe.
https://bugs.webkit.org/show_bug.cgi?id=172263
Summary AudioSourceProviderAVFObjC::m_tap member access is not thread safe.
Per Arne Vollan
Reported 2017-05-18 00:25:21 PDT
It it possible that the main thread will modify the m_tap member by calling AudioSourceProviderAVFObjC::destroyMix(), while m_tap is being read on a secondary thread in AudioSourceProviderAVFObjC::process().
Attachments
Patch (4.11 KB, patch)
2017-05-18 00:38 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2017-05-18 00:38:22 PDT
Darin Adler
Comment 2 2017-06-06 13:54:50 PDT
Comment on attachment 310493 [details] Patch Can we construct a test case?
Per Arne Vollan
Comment 3 2017-06-07 03:29:10 PDT
(In reply to Darin Adler from comment #2) > Comment on attachment 310493 [details] > Patch > > Can we construct a test case? I have not been able to reproduce this. I believe the probability of two threads simultaneously accessing m_tap is (very) small. Thanks for reviewing!
WebKit Commit Bot
Comment 4 2017-06-07 03:57:27 PDT
Comment on attachment 310493 [details] Patch Clearing flags on attachment: 310493 Committed r217878: <http://trac.webkit.org/changeset/217878>
WebKit Commit Bot
Comment 5 2017-06-07 03:57:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.